@@ -70,3 +70,4 @@ FRAMEWORK:
   - starlette-newest
   - pymemcache-3.0
   - pymemcache-newest
+  - httpx-newest
