@@ -1,0 +1,2 @@
+httpx==0.12.*
+-r reqs-base.txt
