@@ -1,0 +1,2 @@
+httpx>=0.13.0
+-r reqs-base.txt
